Fixed KA form button layout issue
The KA Form button spaces were slam up against the right margin of the box, and it looked like they were cut off. Added a bit of padding, and they look much better now..

--- a/khan-exercises/css/khan-site.css
+++ b/khan-exercises/css/khan-site.css
@@ -14563,6 +14563,7 @@ stacks and cards: i.e. the stack of mini cards, the big exercise card, etc.
 .current-card {
 	position: relative;
 	margin-bottom: 20px;
+    padding-right: 20px;
 }
 
 .current-card #answer_area_wrap {
